recursion.lessons.recursion.koch.Koch.scala.error
Koch:18: error: not found: value snowside
	snowside(levels-1,length);
        ^Koch:21: error: not found: value snowside
	snowside(levels-1,length);
        ^Koch:24: error: not found: value snowside
	snowside(levels-1,length);
        ^